--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,15 @@
 $lightgGreen: #b9e7e7;
 
 .app {
+  display: flex;
+  justify-content: center;
   .container {
+    width: 1024px;
+
+    .link {
+      text-decoration: none;
+      color: inherit;
+    }
     // LOGIN AND REGISTER
 
     .auth {
@@ -50,6 +58,56 @@ $lightgGreen: #b9e7e7;
       span {
         font-size: 14px;
         text-align: center;
+      }
+    }
+  }
+
+  //NAVBAR
+
+  .navbar {
+    .container {
+      padding: 10px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .logo {
+        img {
+          width: 120px;
+        }
+      }
+      .links {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        h6 {
+          font-size: 16px;
+          font-weight: 300;
+          text-transform: uppercase;
+        }
+
+        span {
+          cursor: pointer;
+        }
+
+        .write {
+          background-color: $lightgGreen;
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-weight: 300;
+
+          &:hover {
+            width: 48px;
+            height: 48px;
+            color: teal;
+            background-color: white;
+            border: 1px solid teal;
+          }
+        }
       }
     }
   }
