--- a/src/style.scss
+++ b/src/style.scss
@@ -23,7 +23,7 @@ $lightgGreen: #619c41;
 
     h1 {
       font-size: 20px;
-      color: white;
+      // color: white;
       margin-bottom: 20px;
     }
 
@@ -122,8 +122,84 @@ $lightgGreen: #619c41;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     img {
       height: 50px;
+    }
+  }
+
+  //HOME
+
+  .home {
+    .posts {
+      margin: 50px 0;
+      display: flex;
+      flex-direction: column;
+      gap: 150px;
+
+      .post {
+        display: flex;
+        gap: 100px;
+
+        &:nth-child(2n + 1) {
+          flex-direction: row-reverse;
+        }
+
+        .img {
+          flex: 2;
+          position: relative;
+
+          &::after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            background-color: $lightgGreen;
+            border-radius: 12px;
+            position: absolute;
+            top: 20px;
+            left: -20px;
+            z-index: -1;
+          }
+
+          img {
+            width: 100%;
+            max-height: 400px;
+            object-fit: cover;
+            border-radius: 12px;
+          }
+        }
+
+        .content {
+          flex: 3;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+
+          h1 {
+            font-size: 36px;
+          }
+
+          p {
+            font-size: 18px;
+          }
+
+          button {
+            width: max-content;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            background-color: white;
+            border: 1px solid $lightgGreen;
+            border-radius: 12px;
+
+            &:hover {
+              border: 1px solid white;
+              background-color: $lightgGreen;
+              color: white;
+            }
+          }
+        }
+      }
     }
   }
 }
