--- a/src/style.scss
+++ b/src/style.scss
@@ -202,4 +202,113 @@ $lightgGreen: #619c41;
       }
     }
   }
+  //SINGLE
+
+  .single {
+    display: flex;
+    gap: 50px;
+
+    .content {
+      flex: 5;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+
+      img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+      }
+
+      .user {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 14px;
+        img {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
+        span {
+          font-weight: bold;
+        }
+      }
+
+      .edit {
+        display: flex;
+        gap: 5px;
+
+        .editbtn {
+          width: 30px;
+          height: 30px;
+          color: rgb(149, 38, 38);
+          text-decoration: none;
+        }
+        .deletebtn {
+          width: 30px;
+          height: 30px;
+          color: $lightgGreen;
+          text-decoration: none;
+        }
+      }
+
+      h1 {
+        font-size: 36px;
+        color: #333;
+      }
+
+      p {
+        text-align: justify;
+        line-height: 30px;
+      }
+    }
+
+    .menu {
+      flex: 2;
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+
+      h1 {
+        font-size: 20px;
+        color: #555;
+      }
+
+      .post {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        img {
+          width: 100%;
+          height: 200px;
+          object-fit: cover;
+        }
+
+        h2 {
+          color: #555;
+        }
+
+        button {
+          width: max-content;
+          padding: 7.5px 15px;
+          border: none;
+          cursor: pointer;
+          color: $lightgGreen;
+          background-color: white;
+          border: 1px solid $lightgGreen;
+          border-radius: 12px;
+
+          &:hover {
+            border: 1px solid white;
+            background-color: $lightgGreen;
+            color: white;
+          }
+        }
+      }
+    }
+  }
 }
